2010-12-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Added cheking for session idle mode.

2010-12-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gtkimage.py, html.py: Added support for generating thumbnails.
	* share/history/jquery.*.js: Added support for jQuery plugin for
	  lazy loading images.

2010-12-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/sqldb.py: Added new module for sqlite.

2010-12-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/history*: Added templates for history html.
	* utils/history.py: Code refactoring.

2010-12-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/history.py: Added single quotation mark escaping in SQL.

2010-12-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Dropped depends on python-numpy.
	* image/tooltip.py: More tooltips for Flickr.
	* utils/history.py: Added photo history with sqlite.

2010-12-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/__init__.py: Added new gconf key: ui/disable_clutter.
	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!

2010-11-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/__init__.py, preferences.ui: Enable help button on
	  Preferences.

2010-11-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Reset the timer in delete_photo function.
	* shotwell.py (ShotwellTrash): Added support for Shotwell Trash.

2010-11-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* clutterimage.py: Fixed module names for Screen Saver.

2010-11-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py (ShotwellPhotoSQL): Added support for flags on the
	  photo database (deleted photos).

2010-11-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/ja/ja.po, po/ja.po: Update Japanese translation.

2010-11-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!
	* shotwell.py: Fixed bugs.
