@@ -158,6 +158,18 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/gphotoframe/show_filename_suffix</key>
+      <applyto>/apps/gphotoframe/show_filename_suffix</applyto>
+      <owner>gphotoframe</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Whether to show filename suffix</short>
+        <long>If true, image filename suffixes (jpe?g|png|gif|bmp) are shown.</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gphotoframe/filter/aspect_max</key>
       <applyto>/apps/gphotoframe/filter/aspect_max</applyto>
       <owner>gphotoframe</owner>
